; ModuleID = '/home/carl/AnghaBench/linux/drivers/regulator/extr_core.c_regulator_lock_recursive.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/regulator/extr_core.c_regulator_lock_recursive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regulator_dev = type { %struct.TYPE_4__*, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { %struct.regulator_dev* }
%struct.TYPE_3__ = type { i32, %struct.regulator_dev** }
%struct.ww_acquire_ctx = type { i32 }

@EDEADLK = common dso_local global i32 0, align 4
@EALREADY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.regulator_dev*, %struct.regulator_dev**, %struct.regulator_dev**, %struct.ww_acquire_ctx*)* @regulator_lock_recursive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @regulator_lock_recursive(%struct.regulator_dev* %0, %struct.regulator_dev** %1, %struct.regulator_dev** %2, %struct.ww_acquire_ctx* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.regulator_dev*, align 8
  %7 = alloca %struct.regulator_dev**, align 8
  %8 = alloca %struct.regulator_dev**, align 8
  %9 = alloca %struct.ww_acquire_ctx*, align 8
  %10 = alloca %struct.regulator_dev*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.regulator_dev* %0, %struct.regulator_dev** %6, align 8
  store %struct.regulator_dev** %1, %struct.regulator_dev*** %7, align 8
  store %struct.regulator_dev** %2, %struct.regulator_dev*** %8, align 8
  store %struct.ww_acquire_ctx* %3, %struct.ww_acquire_ctx** %9, align 8
  store i32 0, i32* %11, align 4
  br label %13

13:                                               ; preds = %87, %4
  %14 = load i32, i32* %11, align 4
  %15 = load %struct.regulator_dev*, %struct.regulator_dev** %6, align 8
  %16 = getelementptr inbounds %struct.regulator_dev, %struct.regulator_dev* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = icmp slt i32 %14, %18
  br i1 %19, label %20, label %90

20:                                               ; preds = %13
  %21 = load %struct.regulator_dev*, %struct.regulator_dev** %6, align 8
  %22 = getelementptr inbounds %struct.regulator_dev, %struct.regulator_dev* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 1
  %24 = load %struct.regulator_dev**, %struct.regulator_dev*** %23, align 8
  %25 = load i32, i32* %11, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds %struct.regulator_dev*, %struct.regulator_dev** %24, i64 %26
  %28 = load %struct.regulator_dev*, %struct.regulator_dev** %27, align 8
  store %struct.regulator_dev* %28, %struct.regulator_dev** %10, align 8
  %29 = load %struct.regulator_dev*, %struct.regulator_dev** %10, align 8
  %30 = icmp ne %struct.regulator_dev* %29, null
  br i1 %30, label %32, label %31

31:                                               ; preds = %20
  br label %87

32:                                               ; preds = %20
  %33 = load %struct.regulator_dev*, %struct.regulator_dev** %10, align 8
  %34 = load %struct.regulator_dev**, %struct.regulator_dev*** %8, align 8
  %35 = load %struct.regulator_dev*, %struct.regulator_dev** %34, align 8
  %36 = icmp ne %struct.regulator_dev* %33, %35
  br i1 %36, label %37, label %59

37:                                               ; preds = %32
  %38 = load %struct.regulator_dev*, %struct.regulator_dev** %10, align 8
  %39 = load %struct.ww_acquire_ctx*, %struct.ww_acquire_ctx** %9, align 8
  %40 = call i32 @regulator_lock_nested(%struct.regulator_dev* %38, %struct.ww_acquire_ctx* %39)
  store i32 %40, i32* %12, align 4
  %41 = load i32, i32* %12, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %58

43:                                               ; preds = %37
  %44 = load i32, i32* %12, align 4
  %45 = load i32, i32* @EDEADLK, align 4
  %46 = sub nsw i32 0, %45
  %47 = icmp eq i32 %44, %46
  br i1 %47, label %48, label %51

48:                                               ; preds = %43
  %49 = load %struct.regulator_dev*, %struct.regulator_dev** %10, align 8
  %50 = load %struct.regulator_dev**, %struct.regulator_dev*** %7, align 8
  store %struct.regulator_dev* %49, %struct.regulator_dev** %50, align 8
  br label %91

51:                                               ; preds = %43
  %52 = load i32, i32* %12, align 4
  %53 = load i32, i32* @EALREADY, align 4
  %54 = sub nsw i32 0, %53
  %55 = icmp ne i32 %52, %54
  %56 = zext i1 %55 to i32
  %57 = call i32 @WARN_ON_ONCE(i32 %56)
  br label %58

58:                                               ; preds = %51, %37
  br label %61

59:                                               ; preds = %32
  %60 = load %struct.regulator_dev**, %struct.regulator_dev*** %8, align 8
  store %struct.regulator_dev* null, %struct.regulator_dev** %60, align 8
  br label %61

61:                                               ; preds = %59, %58
  %62 = load %struct.regulator_dev*, %struct.regulator_dev** %10, align 8
  %63 = getelementptr inbounds %struct.regulator_dev, %struct.regulator_dev* %62, i32 0, i32 0
  %64 = load %struct.TYPE_4__*, %struct.TYPE_4__** %63, align 8
  %65 = icmp ne %struct.TYPE_4__* %64, null
  br i1 %65, label %66, label %86

66:                                               ; preds = %61
  %67 = load %struct.regulator_dev*, %struct.regulator_dev** %10, align 8
  %68 = call i32 @regulator_supply_is_couple(%struct.regulator_dev* %67)
  %69 = icmp ne i32 %68, 0
  br i1 %69, label %86, label %70

70:                                               ; preds = %66
  %71 = load %struct.regulator_dev*, %struct.regulator_dev** %10, align 8
  %72 = getelementptr inbounds %struct.regulator_dev, %struct.regulator_dev* %71, i32 0, i32 0
  %73 = load %struct.TYPE_4__*, %struct.TYPE_4__** %72, align 8
  %74 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %73, i32 0, i32 0
  %75 = load %struct.regulator_dev*, %struct.regulator_dev** %74, align 8
  %76 = load %struct.regulator_dev**, %struct.regulator_dev*** %7, align 8
  %77 = load %struct.regulator_dev**, %struct.regulator_dev*** %8, align 8
  %78 = load %struct.ww_acquire_ctx*, %struct.ww_acquire_ctx** %9, align 8
  %79 = call i32 @regulator_lock_recursive(%struct.regulator_dev* %75, %struct.regulator_dev** %76, %struct.regulator_dev** %77, %struct.ww_acquire_ctx* %78)
  store i32 %79, i32* %12, align 4
  %80 = load i32, i32* %12, align 4
  %81 = icmp ne i32 %80, 0
  br i1 %81, label %82, label %85

82:                                               ; preds = %70
  %83 = load %struct.regulator_dev*, %struct.regulator_dev** %10, align 8
  %84 = call i32 @regulator_unlock(%struct.regulator_dev* %83)
  br label %91

85:                                               ; preds = %70
  br label %86

86:                                               ; preds = %85, %66, %61
  br label %87

87:                                               ; preds = %86, %31
  %88 = load i32, i32* %11, align 4
  %89 = add nsw i32 %88, 1
  store i32 %89, i32* %11, align 4
  br label %13

90:                                               ; preds = %13
  store i32 0, i32* %5, align 4
  br label %96

91:                                               ; preds = %82, %48
  %92 = load %struct.regulator_dev*, %struct.regulator_dev** %6, align 8
  %93 = load i32, i32* %11, align 4
  %94 = call i32 @regulator_unlock_recursive(%struct.regulator_dev* %92, i32 %93)
  %95 = load i32, i32* %12, align 4
  store i32 %95, i32* %5, align 4
  br label %96

96:                                               ; preds = %91, %90
  %97 = load i32, i32* %5, align 4
  ret i32 %97
}

declare dso_local i32 @regulator_lock_nested(%struct.regulator_dev*, %struct.ww_acquire_ctx*) #1

declare dso_local i32 @WARN_ON_ONCE(i32) #1

declare dso_local i32 @regulator_supply_is_couple(%struct.regulator_dev*) #1

declare dso_local i32 @regulator_unlock(%struct.regulator_dev*) #1

declare dso_local i32 @regulator_unlock_recursive(%struct.regulator_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
